{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 1368,
  "lineage": "141c2541-3bed-f6a1-3e2b-9d6d77d6dd6f",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:security-group/sg-07e22bb24e2d07579",
            "description": "ECS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e22bb24e2d07579",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from EC2 Instance Connect",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "674541888232",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b65f6c266b64f39b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:internet-gateway/igw-0e41e90cf5a86666d",
            "id": "igw-0e41e90cf5a86666d",
            "owner_id": "674541888232",
            "tags": {
              "Name": "ecs-vpc"
            },
            "tags_all": {
              "Name": "ecs-vpc"
            },
            "vpc_id": "vpc-0b65f6c266b64f39b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:route-table/rtb-0eac8517a9d7a2d33",
            "id": "rtb-0eac8517a9d7a2d33",
            "owner_id": "674541888232",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e41e90cf5a86666d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-vpc-public"
            },
            "tags_all": {
              "Name": "ecs-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b65f6c266b64f39b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc_ig",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0820eaeefbb9f8e3a",
            "route_table_id": "rtb-0eac8517a9d7a2d33",
            "subnet_id": "subnet-09e1540746bbe0de5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc_ig",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0863fcfd76e2c2dda",
            "route_table_id": "rtb-0eac8517a9d7a2d33",
            "subnet_id": "subnet-0403255992486ad76"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc_ig",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:subnet/subnet-09e1540746bbe0de5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e1540746bbe0de5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "674541888232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-vpc-public-0"
            },
            "tags_all": {
              "Name": "ecs-vpc-public-0"
            },
            "vpc_id": "vpc-0b65f6c266b64f39b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:subnet/subnet-0403255992486ad76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0403255992486ad76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "674541888232",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-vpc-public-1"
            },
            "tags_all": {
              "Name": "ecs-vpc-public-1"
            },
            "vpc_id": "vpc-0b65f6c266b64f39b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:674541888232:vpc/vpc-0b65f6c266b64f39b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00be22b4a692c24d6",
            "default_route_table_id": "rtb-0c8f10a5850f382f4",
            "default_security_group_id": "sg-0e6bf5fe010431bfa",
            "dhcp_options_id": "dopt-06e5265d6328d4581",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b65f6c266b64f39b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c8f10a5850f382f4",
            "owner_id": "674541888232",
            "tags": {
              "Name": "ecs-vpc"
            },
            "tags_all": {
              "Name": "ecs-vpc"
            }
          }
        }
      ]
    }
  ]
}